--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:50:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:50:14</td>   <td>11844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.Title()[pri:1, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">Title</td> 
-  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:50:14</td>   <td>12220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:50:16</td>   <td>13954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:50:30</td>   <td>27936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.CreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">CreateNewUser</td> 
-  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:50:42</td>   <td>40058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:50:43</td>   <td>40974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:50:55</td>   <td>52764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.CreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">CreateNewUser</td> 
-  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:51:13</td>   <td>70306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:51:13</td>   <td>71089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:51:21</td>   <td>78720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.CreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">CreateNewUser</td> 
-  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:51:34</td>   <td>92112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:51:35</td>   <td>92925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:51:46</td>   <td>103884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.CreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">CreateNewUser</td> 
-  <td>main@1224347463</td>   <td></td> </tr>
-<tr bgcolor="9e72ba">  <td>19/05/04 20:53:11</td>   <td>188543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@1a0dcaa]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1224347463</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:19:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:20:03</td>   <td>26251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.Title()[pri:1, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">Title</td> 
+  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:20:03</td>   <td>26266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:20:05</td>   <td>28110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:20:18</td>   <td>41087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.CreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">CreateNewUser</td> 
+  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:21:44</td>   <td>127166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:21:45</td>   <td>128182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:22:06</td>   <td>149211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.CreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">CreateNewUser</td> 
+  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:22:27</td>   <td>169754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:22:28</td>   <td>170661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:22:47</td>   <td>189549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.CreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">CreateNewUser</td> 
+  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:23:25</td>   <td>228317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:23:26</td>   <td>229099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:23:42</td>   <td>245390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.CreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">CreateNewUser</td> 
+  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>19/05/05 17:24:11</td>   <td>273739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpTest.tearDown()[pri:0, instance:com.facebook.qa.testcases.SignUpTest@10db82ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1219161283</td>   <td></td> </tr>
 </table>
